# dibol2c

./: AUTHORS  AnatomyTranslatedCode.md  Contribute.md  INSTALL  Makefile.am  ProjectHome.md  README  THANKS  TODO  configure.in  dibol-config.in  dibol2c.dox
docs/: FILEMANAGEMENT  STATUS  cygwin.txt  licensing  namespace  translation  writingfunction
lib/: Makefile.am
lib/common/: Makefile.am  filename.c  filename.h  stack.c  stack.h
lib/rtl/: Makefile.am  accept.c  accept.h  call.c  call.h  clear.c  clear.h  close.c  close.h  decr.c  decr.h  delete.c  delete.h  dibol.c  dibol.h  display.c  display.h  error.c  error.h  filefonc.c  filefonc.h  forms.c  forms.h  incr.c  incr.h  locase.c  locase.h  lpque.c  lpque.h  open.c  open.h  operators.c  operators.h  read.c  read.h  reads.c  reads.h  send.c  send.h  sleep.c  (+15 more)
lib/ues/: Makefile.am  ascii.c  ascii.h  date.c  date.h  decml.c  decml.h  delet.c  delet.h  error.c  error.h  fatal.c  fatal.h  flags.c  flags.h  instr.c  instr.h  jbno.c  jbno.h  money.c  money.h  pak.c  pak.h  renam.c  renam.h  rstat.c  rstat.h  runjb.c  runjb.h  size.c  size.h  time.c  time_ues.h  tnmbr.c  tnmbr.h  ttsts.c  ttsts.h  ues.h  unpak.c  unpak.h  (+5 more)
other/: dibol.vim
other/c++/: Makefile  README  test.cpp  variable.cpp  variable.h
src/: Makefile.am
src/d2c/: Makefile.am  d2c.c  d2c.h  dibollexer.l  dibolparser.y  gencode.c  gencode.h  symbols.c  symbols.h
src/dc/: Makefile.am  README  dc.c
src/dpp/: Makefile.am  dpp.c  dpplexer.l  dppparser.y
testsuite/: KAI.DBL  Makefile.am  NESTEDIF.DBL  run.sh  substring1.dbl
testsuite/arithmetic/: add1.dbl
testsuite/common/: COMMON.DBL  LABEL.DBL  TSTCMN.DBL
testsuite/dpp/: define.dbl  ifdef.dbl  test1.dbl  test3.dbl
testsuite/dpp/include/: test2.dbl
testsuite/hello/: hello.dbl  hello.output
testsuite/strings/: string1.dbl
testsuite/tests/: kai1.dbl  nestedif.dbl  nextloop.dbl  xcall1.dbl
testsuite/tests/arithmetic/: add1.dbl
testsuite/tests/array/: array1.dbl
testsuite/tests/dpp/: define1.dbl  ifdef1.dbl  include1.dbl  include2.dbl  include2.inc
testsuite/tests/group/: group1.dbl  group2.dbl  group3.dbl  group4.dbl
testsuite/tests/hello/: hello.dbl
testsuite/tests/strings/: string1.dbl  string2.dbl  substring1.dbl
