INCLUDES=-I../common

lib_LTLIBRARIES = libdibol.la
libdibol_la_LDFLAGS = -version-info 0:0:0
libdibol_la_SOURCES = accept.c call.c clear.c \
	close.c delete.c dibol.c display.c \
	error.c	filefonc.c forms.c \
	incr.c locase.c lpque.c \
	open.c operators.c \
	variables.c write.c writes.c \
	sleep.c stop.c \
	unlock.c upcase.c read.c \
	reads.c send.c store.c decr.c
include_HEADERS = accept.h call.h clear.h \
	close.h delete.h dibol.h display.h \
	error.h filefonc.h forms.h \
	incr.h locase.h lpque.h \
	open.h operators.h \
	variables.h write.h writes.h \
	sleep.h stop.h \
	unlock.h upcase.h read.h \
	reads.h send.h store.h decr.h
