INCLUDES=-I../rtl -I../common

lib_LTLIBRARIES = libdibolues.la
libdibolues_la_LDFLAGS = -version-info 0:0:0
libdibolues_la_SOURCES = \
	ascii.c \
	date.c \
	decml.c \
	delet.c \
	error.c \
	fatal.c \
	flags.c \
	instr.c \
	jbno.c \
	money.c \
	pak.c \
	renam.c \
	rstat.c \
	runjb.c \
	size.c \
	time.c \
	tnmbr.c \
	ttsts.c \
	unpak.c \
	versn.c \
	wait.c
include_HEADERS = ues.h
